--- a/_posts/maths/2017-03-21-papers.md
+++ b/_posts/maths/2017-03-21-papers.md
@@ -69,6 +69,7 @@ Bài báo của **Arnold2008** về basis mới
 
 
 
+
 ### Barrau & Becker's articles & thesis
 
 Cô nói mình xem cái thèse và bài báo của **barrau** (cf. **Barrau2013**) để bắt chước và viết theo.
@@ -187,4 +188,23 @@ u &= 0 \quad (\partial \Omega \times (0,T) )\\
 $$
 
 ---
+
+**chopp duddu et al 2008** *A two-dimension growth continuum model of biofilm growth incorporating fluid flow and shear stress based detachment*
+
+- The model considers fluid flow around the biofilm surface, the advection-diffusion and reaction of substrate, variable mass volume fraction and erosion due to the interface shear stress at the biofilm fluid interface.
+- Detachment due to erosion is modeled using two continuous speed functions based on: (a) interfacial shear stress + (b) biofilm height.
+- Solution method: XFEM is used to computed $u,S,\Phi$ (velocity field, substrate concentration, biofilm growth). The level set method is used to track the biofilm interface. However, they use the less diffusive fast marching scheme with velocity extensions.
+- Governing equations (in the paper)
+- The authors present the results obtained from their numerical method using the model parameters and kinetics given in other authors' work.
+
+---
+
+Có 1 file tên **thi-papers.pdf** có lưu thông tin đọc các bài báo sau đây
+
+- **chopp duddu et al 2008** A two-dimension growth continuum model of biofilm growth incorporating fluid flow and shear stress based detachment
+- **chopp duddu et al 2007** Combined extended finite element and level set method for biofilm growth
+- **chopp et al 2002** A mathematical model of quorum sensing in a growing bacterial biofilm
+- **picioreanu et al 2000a** Effect of diffusive and convective substrate transport on biofilm structure formation: a two-dimensional modeling study
+- **picioreanu et al 2000b** Discrete-Differential modelling of biofilm structure
+- **rittman 1982** The effect of shear stress on biofilm loss rate
 
