--- a/_posts/maths/2017-03-21-article-1.md
+++ b/_posts/maths/2017-03-21-article-1.md
@@ -15,7 +15,7 @@ $$
 \end{align*}
 $$
 
-Vì ta không thể chia hai vế cho $\bar{\alpha}​$ được do cái term đầu tiên là trên toàn miền $\Omega​$ (tức có cả $\alpha_1,\alpha_2​$), còn 2 cái terms sau chỉ xét trên $\Omega_1​$ mà thôi (tức chỉ có $\alpha_1​$).
+Vì ta không thể chia hai vế cho $\bar{\alpha}$ được do cái term đầu tiên là trên toàn miền $\Omega$ (tức có cả $\alpha\_1,\alpha\_2$), còn 2 cái terms sau chỉ xét trên $\Omega\_1$ mà thôi (tức chỉ có $\alpha\_1$).
 
 Viết tượng trưng rõ ra thì nó giống vầy
 
@@ -29,7 +29,7 @@ $$
 \int_{\Omega_1} A+ \int_{\Omega_2} A + \int_{\partial\Omega_1}B = \int_{\partial\Omega_1} C
 $$
 
-**Thật ra là có thể**, lập luận như sau. Nhân cả hai vế của cái trên trên cho $\alpha^{-1} = \begin{cases}\alpha^{-1}_1 \text{ in }\Omega_1 \\ \alpha^{-1}_2 \text{ in }\Omega_2 \end{cases}$, we have
+**Thật ra là có thể**, lập luận như sau. Nhân cả hai vế của cái trên trên cho $\alpha^{-1} = \begin{cases}\alpha^{-1}\_1 \text{ in }\Omega_1 \\ \alpha^{-1}\_2 \text{ in }\Omega_2 \end{cases}$, we have
 
 $$
 \int_{\Omega_1}\alpha^{-1}\alpha_1 A+ \int_{\Omega_2}\alpha^{-1}\alpha A + \int_{\partial\Omega_1}\alpha^{-1}\alpha B = \int_{\partial\Omega_1}\alpha^{-1}\alpha C
@@ -55,12 +55,12 @@ $$
 
 Câu hỏi đặt ra là chuẩn triple 1 và triple 2 có tương đương với nhau không?
 
-- Không có cách nào đánh giá $\Vert [ \bar{\alpha}z ]\Vert_{\frac{1}{2}}$ được so với cái chuẩn còn lại. Chỉ có thể đánh giá nó với lượng $\Vert [ z ]\Vert_{\frac{1}{2}}$ mà thôi vì nếu đánh giá nó với các lượng khác thì cái chuẩn ko có xuất hiện lượng  $\Vert [ z ]\Vert_{\frac{1}{2}}$ này làm cái gì. Nhưng 2 cái này không thể đánh giá được!!! Vướng mắc lớn ở cái định nghĩa $\Vert\cdot\Vert_{\frac{1}{2}}$ có $\frac{1}{h}$ trong đó!
-- Còn cái $\Vert \{\bar{\alpha}\nabla_n z\} \Vert_{-\frac{1}{2}}$ thì có thể đánh giá được! Tại sao trong Hansbo cái chuẩn triple ko có $\alpha$ nhưng trong khi chứng minh coercive thì cái lượng lại có $\alpha$? Vậy làm sao chứng minh cái lượng có $\alpha$ lớn hơn cái ko có được?
+- Không có cách nào đánh giá $\Vert [ \bar{\alpha}z ]\Vert\_{\frac{1}{2}}$ được so với cái chuẩn còn lại. Chỉ có thể đánh giá nó với lượng $\Vert [ z ]\Vert\_{\frac{1}{2}}$ mà thôi vì nếu đánh giá nó với các lượng khác thì cái chuẩn ko có xuất hiện lượng  $\Vert [ z ]\Vert\_{\frac{1}{2}}$ này làm cái gì. Nhưng 2 cái này không thể đánh giá được!!! Vướng mắc lớn ở cái định nghĩa $\Vert\cdot\Vert\_{\frac{1}{2}}$ có $\frac{1}{h}$ trong đó!
+- Còn cái $\Vert \{\bar{\alpha}\nabla_n z\} \Vert\_{-\frac{1}{2}}$ thì có thể đánh giá được! Tại sao trong Hansbo cái chuẩn triple ko có $\alpha$ nhưng trong khi chứng minh coercive thì cái lượng lại có $\alpha$? Vậy làm sao chứng minh cái lượng có $\alpha$ lớn hơn cái ko có được?
 
 ---
 
-Chú ý quan trọng, $\Vert v_h\Vert^2_{L^2(\Omega)} = \Vert v_h\Vert^2_{L^2(\Omega_{12})}$ vì $\int_{\Omega}v_h^2 = \int_{\Omega_1}v_h^2 + \int_{\Omega_2}v_h^2$ . Nhớ rằng, chỉ có $\Omega_{12}$ khi có cái $\alpha$ thôi vì thực tế $\int_{\Omega}\alpha$ không có ý nghĩa vì $\alpha$ có giá trị khác nhau ở hai subdomain $\Omega_i$.
+Chú ý quan trọng, $\Vert v\_h\Vert^2\_{L^2(\Omega)} = \Vert v\_h\Vert^2\_{L^2(\Omega\_{12})}$ vì $\int\_{\Omega}v\_h^2 = \int\_{\Omega\_1}v\_h^2 + \int\_{\Omega\_2}v\_h^2$ . Nhớ rằng, chỉ có $\Omega\_{12}$ khi có cái $\alpha$ thôi vì thực tế $\int\_{\Omega}\alpha$ không có ý nghĩa vì $\alpha$ có giá trị khác nhau ở hai subdomain $\Omega\_i$.
 
 ---
 
@@ -91,7 +91,7 @@ Do đó mới có cái điều kiện $u+\varepsilon \nabla_n u=\hat{u}$ và tư
 
 ---
 
-### Tại sao ta có form của $a_{vh}$ liên quan tới $B=0$ on $\Gamma$
+### Tại sao ta có form của $a\_{vh}$ liên quan tới $B=0$ on $\Gamma$
 
 Ta có phương trình
 
