--- a/_posts/maths/2017-03-21-analysis-2.md
+++ b/_posts/maths/2017-03-21-analysis-2.md
@@ -264,7 +264,7 @@ $\Rightarrow$ 3 cái trên có thể hiểu nhanh gọn : *Mỗi bounded sequenc
 
 - A **weakly convergent** sequence in a Hilbert space $H$ is **bounded**. Xem chứng minh ở Theorem 3.3.15 sách của **Debnath2005**
 
-- The norm is (sequentially) **weakly lower-semicontinuous**: if $x\_{n}$ converges weakly to $x$, then $\Vert x\Vert \leq \liminf\_{{n\to \infty }}\Vert x\_{n}\Vert,$ and this inequality is strict whenever the convergence is not strong. For example, infinite orthonormal sequences converge weakly to zero, as demonstrated below.
+- The norm is (sequentially) **weakly lower-semicontinuous**: if $x\_{n}$ converges weakly to $x$, then $\Vert x\Vert \leq \liminf\_{n\to \infty}\Vert x\_{n}\Vert,$ and this inequality is strict whenever the convergence is not strong. For example, infinite orthonormal sequences converge weakly to zero, as demonstrated below.
 
   $$
   0 \le \Vert{x_n-x}\Vert^2 = \Vert{x}\Vert^2 - 2Re\langle{x_n,x}\rangle + \Vert{x}\Vert^2.
