sửa trình bày và di chuyển 1 số đoạn sang file khác

--- a/_posts/phd/2017-03-21-papers.md
+++ b/_posts/phd/2017-03-21-papers.md
@@ -4,6 +4,7 @@ categories:
   - maths
   - phd
 toc: 1
+tags: ["ghost penalty","interface"]
 maths: 1
 ---
 
@@ -139,7 +140,6 @@ Mô hình của Chopp trong **Duddu2006** có nói có thể xem phương trình
 - Chopp là với model rất đơn giản của substrate + biofilm
 - No analysis work! (có gợi ý phương trình, phương pháp nhưng thiên về technique). Không có chứng minh tồn tại, hội tụ, wellposedness
 - BCs của ông này cũng đơn giản, của mình là Robin lằn bà nhằn
-- ​
 
 ## Other papers
 
