--- a/_posts/maths/2017-03-21-analysis-1.md
+++ b/_posts/maths/2017-03-21-analysis-1.md
@@ -5,6 +5,79 @@ maths: 1
 toc: 1
 ---
 
+> Xem [phần 2](/analysis-2).
+
+## Divergence theorem (Gauss's theorem)
+
+More precisely, the divergence theorem states that the outward flux of a vector field through a closed surface is equal to the volume integral of the divergence over the region inside the surface. Intuitively, it states that the sum of all sources minus the sum of all sinks gives the net flow out of a region. [From wiki](https://en.wikipedia.org/wiki/Divergence_theorem).
+
+$$
+\iiint _{V}\left(\mathbf {\nabla } \cdot \mathbf {F} \right)\,dV= \int {\displaystyle \scriptstyle S} \scriptstyle S {\displaystyle (\mathbf {F} \cdot \mathbf {n} )\,dS.} (\mathbf {F} \cdot \mathbf {n} )\,dS.
+$$
+
+---
+
+**Homeomorphic** (đồng phôi) =  Continuous, one-to-one, in surjection, and having a continuous inverse. (Liên tục + song ánh + ánh xạ ngược cũng liên tục)
+
+---
+
+**Bolzano–Weierstrass** theorem : Every each bounded sequence in $\mathbb{R}^n$ has a convergent subsequence.
+
+Mọi dãy bị chặn đều có dãy con hội tụ.
+
+Convergence theo nghĩa thông thường $\Vert u-u_h \Vert$ chỉ có thể áp dụng nếu như chứng minh được nghiệm duy nhất. Còn không thì phải làm theo hướng hội tụ yếu hay hầu khắp nơi gì đó.
+
+## semilinear problem
+
+[[source]](http://wiki.math.toronto.edu/DispersiveWiki/index.php/Semilinear) A **semilinear** equation is a PDE of the form
+$$Lu = F(u)$$
+where $L$ is a linear operator and $F$ is a nonlinear operator which does not involve any derivatives of $u$.
+
+A **semilinear-with-derivatives** equation is a PDE of the form
+$$L u = F(u, Du, \ldots, D^k u)$$
+where $L$ is a linear operator, $F$ is a nonlinear function of the first few derivatives $u, Du, \ldots, D^k u$, with $k$ strictly less than the order of $L$.
+
+Semilinear-with-derivatives equations are more nonlinear than semilinear equations, but are less nonlinear than quasilinear or fully nonlinear equations.
+
+$\Rightarrow$ Phân loại + ví dụ ngắn gọn dễ hiểu về các cái nonlinear này, có thể xem [ở đây.](http://math.stackexchange.com/questions/388389/simple-pde-classification-question)
+
+## Rellich
+
+**Rellich** (relative compact, file `analysis/rellich relative compact.pdf`) Let $X,Y$ be two normed linear spaces, suppose $T:X \to Y$ is a linear operator. The the following are equivalent,
+
+1. $T$ is compact. ($T$ is called a *compact operator* if for all bounded sets $E\subseteq X$, $T(E)$ is relative compact in $Y$ and $T$ is continuous.)
+2. The image of the unit ball under $T$ is relative compact in $Y$.
+3. For any bounded sequence $\{x_n\}$ in $X$, there exist a subsequence $\{Tx_{x_k}\}$ of $\{Tx_n\}$ that converges (strongly) in $Y$. $\Rightarrow$ Cái này cũng suy ra chỗ nếu dãy bị chặn trong $H^1 \hookrightarrow L^2$ thì tồn tại dãy con hội tụ mạnh trong $L^2$ luôn, dãy con đó chỉ hội tụ yếu trong $H^1$ mà thôi.
+
+---
+
+**Rellich's properties** (file *analysis/rellich relative compact.pdf*)
+
+- Any bounded set in $H^1_0(\Omega)$ is relative compact in $L^2(\Omega)$.
+- Any bounded sequence in $H^1_0(\Omega)$ has a subsequence that converges strongly in $L^2(\Omega)$.
+- Compact operator maps quickly convergence to strongly convergence. (file *weak weakstar convergence.pdf*)
+
+---
+
+**Rellich-Kondrachov** : Let $\Omega$ be a regular bounded domain in $\mathbb{R}^n$
+
+- Suppose that $1\le p < n $ and $ 1 \le q < p^* $, then bounded set in $W^{1,p}(\Omega)$ is precompact (relatively compact) in $L^q(\Omega)$
+- Suppose that $p>n$ then bounded sets in  $W^{1,p}(\Omega)$ is precompact (relatively compact) in $C(\overline{\Omega})$.
+
+---
+
+**Rellich-Kondrachov** (Duong Minh Duc) : Let $D$ be a bounded open subset with smooth boundary in $\mathbb{R}^n$, $k$ be positive integer, and $p\in [1,\infty)$ such that $kp<n$. Let $q\in [1;\frac{np}{n-kp})$ and put
+
+$$
+T(u)=u, \forall u\in W^{k,p}(D)
+$$
+
+Then $T$ is a bounded linear mapping from $W^{k,p}(D)\to L^q(D)$ and $\overline{T(A)}$ is compact in $L^q(D)$ for any bounded subset $A\subset W^{1,p}(D)$.
+
+Cũng trong file của thầy Đức, định lý trên cũng đúng cho $p\in (1,\infty), q\in [1,\infty)$.
+
+## Không phân loại
+
 **Support of a function** $f: X\to \mathbb{R}$ is
 
 $$
@@ -212,41 +285,6 @@ Lưu ý nếu trong không gian $M$, mọi dãy Cauchy mà hội tụ thì khôn
 
 ---
 
-**Rellich** (relative compact, file `analysis/rellich relative compact.pdf`) Let $X,Y$ be two normed linear spaces, suppose $T:X \to Y$ is a linear operator. The the following are equivalent,
-
-1. $T$ is compact. ($T$ is called a *compact operator* if for all bounded sets $E\subseteq X$, $T(E)$ is relative compact in $Y$ and $T$ is continuous.)
-2. The image of the unit ball under $T$ is relative compact in $Y$.
-3. For any bounded sequence $\{x_n\}$ in $X$, there exist a subsequence $\{Tx_{x_k}\}$ of $\{Tx_n\}$ that converges (strongly) in $Y$. $\Rightarrow$ Cái này cũng suy ra chỗ nếu dãy bị chặn trong $H^1 \hookrightarrow L^2$ thì tồn tại dãy con hội tụ mạnh trong $L^2$ luôn, dãy con đó chỉ hội tụ yếu trong $H^1$ mà thôi.
-
----
-
-**Rellich's properties** (file *analysis/rellich relative compact.pdf*)
-
-- Any bounded set in $H^1_0(\Omega)$ is relative compact in $L^2(\Omega)$.
-- Any bounded sequence in $H^1_0(\Omega)$ has a subsequence that converges strongly in $L^2(\Omega)$.
-- Compact operator maps quickly convergence to strongly convergence. (file *weak weakstar convergence.pdf*)
-
----
-
-**Rellich-Kondrachov** : Let $\Omega$ be a regular bounded domain in $\mathbb{R}^n$
-
-- Suppose that $1\le p < n $ and $ 1 \le q < p^* $, then bounded set in $W^{1,p}(\Omega)$ is precompact (relatively compact) in $L^q(\Omega)$
-- Suppose that $p>n$ then bounded sets in  $W^{1,p}(\Omega)$ is precompact (relatively compact) in $C(\overline{\Omega})$.
-
----
-
-**Rellich-Kondrachov** (Duong Minh Duc) : Let $D$ be a bounded open subset with smooth boundary in $\mathbb{R}^n$, $k$ be positive integer, and $p\in [1,\infty)$ such that $kp<n$. Let $q\in [1;\frac{np}{n-kp})$ and put
-
-$$
-T(u)=u, \forall u\in W^{k,p}(D)
-$$
-
-Then $T$ is a bounded linear mapping from $W^{k,p}(D)\to L^q(D)$ and $\overline{T(A)}$ is compact in $L^q(D)$ for any bounded subset $A\subset W^{1,p}(D)$.
-
-****Cũng trong file của thầy Đức, định lý trên cũng đúng cho $p\in (1,\infty), q\in [1,\infty)$.
-
----
-
 **Equivalent norm** : Hai chuẩn trong không gian hữu hạn chiều thì tương đương. Xem chứng minh trong note của
 
 ---
@@ -295,39 +333,4 @@ The "**fundamental lemma of the calculus of variations**" or “**Du Bois-Reymon
 
 When $f\in L_{1,loc}(\Omega)$ with $\int f(x)\varphi(x)=0$ for all $\varphi\in C^{\infty}_0$ then $f=0$.
 
----
-## Divergence theorem (Gauss's theorem)
-
-More precisely, the divergence theorem states that the outward flux of a vector field through a closed surface is equal to the volume integral of the divergence over the region inside the surface. Intuitively, it states that the sum of all sources minus the sum of all sinks gives the net flow out of a region. [From wiki](https://en.wikipedia.org/wiki/Divergence_theorem).
-
-$$
-\iiint _{V}\left(\mathbf {\nabla } \cdot \mathbf {F} \right)\,dV= \int {\displaystyle \scriptstyle S} \scriptstyle S {\displaystyle (\mathbf {F} \cdot \mathbf {n} )\,dS.} (\mathbf {F} \cdot \mathbf {n} )\,dS.
-$$
-
----
-
-**Homeomorphic** (đồng phôi) =  Continuous, one-to-one, in surjection, and having a continuous inverse. (Liên tục + song ánh + ánh xạ ngược cũng liên tục)
-
----
-**Bolzano–Weierstrass** theorem : Every each bounded sequence in $\mathbb{R}^n$ has a convergent subsequence.
-
-Mọi dãy bị chặn đều có dãy con hội tụ.
-
-Convergence theo nghĩa thông thường $\Vert u-u_h \Vert$ chỉ có thể áp dụng nếu như chứng minh được nghiệm duy nhất. Còn không thì phải làm theo hướng hội tụ yếu hay hầu khắp nơi gì đó.
-
----
-
-## semilinear problem
-
-[[source]](http://wiki.math.toronto.edu/DispersiveWiki/index.php/Semilinear) A **semilinear** equation is a PDE of the form
-$$Lu = F(u)$$
-where $L$ is a linear operator and $F$ is a nonlinear operator which does not involve any derivatives of $u$.
-
-A **semilinear-with-derivatives** equation is a PDE of the form
-$$L u = F(u, Du, \ldots, D^k u)$$
-where $L$ is a linear operator, $F$ is a nonlinear function of the first few derivatives $u, Du, \ldots, D^k u$, with $k$ strictly less than the order of $L$.
-
-Semilinear-with-derivatives equations are more nonlinear than semilinear equations, but are less nonlinear than quasilinear or fully nonlinear equations.
-
-$\Rightarrow$ Phân loại + ví dụ ngắn gọn dễ hiểu về các cái nonlinear này, có thể xem [ở đây.](http://math.stackexchange.com/questions/388389/simple-pde-classification-question)
-
+> Xem [phần 2](/analysis-2).
