--- a/_posts/phd/2017-03-21-papers.md
+++ b/_posts/phd/2017-03-21-papers.md
@@ -75,8 +75,10 @@ Bài báo của **Arnold2008** về basis mới
 
 - Ổng cũng giả sử interface không đi qua các nodes mà ít nhất cắt tam giác tại hai cạnh.
 - Ổng xét trường hợp tổng quát cho $H^m$ luôn trong khi mình chủ yếu làm việc với $m=1$.
-- Ổng "use the notation" $\Vert u\Vert\_{m,\Omega\_1\cup\Omega\_2} = \Vert u\Vert\_{m,\Omega\_2}^2 + \Vert u\Vert\_{m,\Omega\_2}^2$
+- Ổng "use the notation" $\Vert u\Vert\_{m,\Omega\_1\cup\Omega\_2}^2 = \Vert u\Vert\_{m,\Omega\_2}^2 + \Vert u\Vert\_{m,\Omega\_2}^2$
 - Ổng giả sử $\Gamma\_h=\Gamma$.
+- Nếu còn thắc mắc về cái $u=(u\_1,u\_2)\in V^h\_1 \times V^h\_2$ thì có thể xem trong đây, trang 4. Ổng nói chi tiết và 1 số quy ước về việc tổng hai cái $u\_1, u\_2$ để trở thành $u$ nguyên vẹn!
+- Stability của basis function mới.
 
 ## Barrau & Becker
 
@@ -149,6 +151,16 @@ Mô hình của Chopp trong **Duddu2006** có nói có thể xem phương trình
 - No analysis work! (có gợi ý phương trình, phương pháp nhưng thiên về technique). Không có chứng minh tồn tại, hội tụ, wellposedness
 - BCs của ông này cũng đơn giản, của mình là Robin lằn bà nhằn
 
+---
+
+**chopp duddu et al 2008** *A two-dimension growth continuum model of biofilm growth incorporating fluid flow and shear stress based detachment*
+
+- The model considers fluid flow around the biofilm surface, the advection-diffusion and reaction of substrate, variable mass volume fraction and erosion due to the interface shear stress at the biofilm fluid interface.
+- Detachment due to erosion is modeled using two continuous speed functions based on: (a) interfacial shear stress + (b) biofilm height.
+- Solution method: XFEM is used to computed $u,S,\Phi$ (velocity field, substrate concentration, biofilm growth). The level set method is used to track the biofilm interface. However, they use the less diffusive fast marching scheme with velocity extensions.
+- Governing equations (in the paper)
+- The authors present the results obtained from their numerical method using the model parameters and kinetics given in other authors' work.
+
 ### Others
 
 Các **bài báo của người khác** (cũng làm liên quan đến chủ đề này, interface) : Ribot, Dianlei Feng, Trung Hieu, Arnold, Nelly Barrau, Christoph Lehrenfeld.
@@ -195,16 +207,6 @@ u &= 0 \quad (\partial \Omega \times (0,T) )\\
 [\beta\nabla_nu]&=g \quad (\Gamma  \times (0,T)).
 \end{align*}
 $$
-
----
-
-**chopp duddu et al 2008** *A two-dimension growth continuum model of biofilm growth incorporating fluid flow and shear stress based detachment*
-
-- The model considers fluid flow around the biofilm surface, the advection-diffusion and reaction of substrate, variable mass volume fraction and erosion due to the interface shear stress at the biofilm fluid interface.
-- Detachment due to erosion is modeled using two continuous speed functions based on: (a) interfacial shear stress + (b) biofilm height.
-- Solution method: XFEM is used to computed $u,S,\Phi$ (velocity field, substrate concentration, biofilm growth). The level set method is used to track the biofilm interface. However, they use the less diffusive fast marching scheme with velocity extensions.
-- Governing equations (in the paper)
-- The authors present the results obtained from their numerical method using the model parameters and kinetics given in other authors' work.
 
 ---
 
