--- a/_posts/phd/2017-03-21-papers.md
+++ b/_posts/phd/2017-03-21-papers.md
@@ -80,6 +80,8 @@ Bài báo của **Arnold2008** về basis mới
 - Nếu còn thắc mắc về cái $u=(u\_1,u\_2)\in V^h\_1 \times V^h\_2$ thì có thể xem trong đây, trang 4. Ổng nói chi tiết và 1 số quy ước về việc tổng hai cái $u\_1, u\_2$ để trở thành $u$ nguyên vẹn!
 - Stability của basis function mới.
 
+Có thể xem thêm về cách xử lý với các basis có support nhỏ [ở đây](/coding-note-1).
+
 ## Barrau & Becker
 
 Cô nói mình xem cái thèse và bài báo của **barrau** (cf. **Barrau2013**) để bắt chước và viết theo.
