--- a/_posts/maths/2017-03-21-analysis-1.md
+++ b/_posts/maths/2017-03-21-analysis-1.md
@@ -27,7 +27,7 @@ Mọi dãy bị chặn đều có dãy con hội tụ.
 
 Convergence theo nghĩa thông thường $\Vert u-u_h \Vert$ chỉ có thể áp dụng nếu như chứng minh được nghiệm duy nhất. Còn không thì phải làm theo hướng hội tụ yếu hay hầu khắp nơi gì đó.
 
-## Semilinear problem
+## semilinear problem
 
 [[source]](http://wiki.math.toronto.edu/DispersiveWiki/index.php/Semilinear) A **semilinear** equation is a PDE of the form
 $$Lu = F(u)$$
@@ -320,13 +320,11 @@ Moreover, $\left\|{T}\right\|=\left\|{g}\right\|$ (operator norm of $T$ and Hilb
 ---
 
 **Second Strang Lemma**: Let $u\in V, u_h\in V_h$ be arbitrary. Then
-
 $$
 \begin{align*}
         \left\|{u-u_h}\right\|_{a} \le \text{inf}\left\|{u-v_h}\right\|_{v_h}+\text{sup}_{v_h}\dfrac{a(u-u_h,v_h)}{\left\|{v_h}\right\|_{a}}
     \end{align*}
 $$
-
 where $\left\|{v}\right\|_{a}=\sqrt{a(v,v)}$.
 
 ---
