--- a/_posts/phd/2017-03-21-papers.md
+++ b/_posts/phd/2017-03-21-papers.md
@@ -69,9 +69,7 @@ Bài báo của **Arnold2008** về basis mới
   \text{inf}_{v\in V}\Vert {u-v}\Vert_{0} \le c\sqrt{h}\Vert {u}\Vert_{m,\Omega_1\cup\Omega_2}
   $$
 
-Đọc lại lần khác:
-
-`arnold analysis of xfem 2008.pdf` có nói về cách xử lý trường hợp vết cắt quá nhỏ dẫn tới ill conditioned. Cái này cũng được nhắc đến trong bài báo của Hansbo và Burman nhưng mấy ông này dùng biện pháp Ghost penalty.
+Đọc lại lần khác: `arnold analysis of xfem 2008.pdf` có nói về cách xử lý trường hợp vết cắt quá nhỏ dẫn tới ill conditioned. Cái này cũng được nhắc đến trong bài báo của Hansbo và Burman nhưng mấy ông này dùng biện pháp Ghost penalty.
 
 - Ổng cũng giả sử interface không đi qua các nodes mà ít nhất cắt tam giác tại hai cạnh.
 - Ổng xét trường hợp tổng quát cho $H^m$ luôn trong khi mình chủ yếu làm việc với $m=1$.
