--- a/_posts/phd/2017-03-21-thesis.md
+++ b/_posts/phd/2017-03-21-thesis.md
@@ -30,6 +30,7 @@ Các bài báo cần nhưng chưa download được:
 - Cách **implementation** interface cut triangles có được nói đến trogn bài báo của Hansbo "CutFEM: discretizing geometry and pde"
 - **Reinitialization** : Trong Arnold, Lehrenfeld và cả master thesis của Dag Lindbo nữa (file `fem level set - dag lindbo.pdf`)
 - level set, nxfem, nistche na ná cái của mình nằm trong thesis của Naerland (fiel `decomposition nitsche unfitted - naerland THESIS.pdf`). Một **ví dụ để code** cũng có thể tìm thấy trong đây.
+-  In [ BZ12 ] it is shown that κ ( A ) depends on how the interface cuts an element. (trang 50 **xfem interface Christoph Lehrenfeld NOTE.pdf**)
 
 ## Useful terms and expressions
 
