--- a/_posts/phd/2017-03-21-papers.md
+++ b/_posts/phd/2017-03-21-papers.md
@@ -58,10 +58,8 @@ In our test problems a Gauss quadrature rule of degree three on a tetrahedron is
 Bài báo của **Arnold2008** về basis mới
 
 - Ổng nói về $L^2$ stabilities của cái basis functions mới.
-
 - Cái mô hình ổng xét là stationary problem nhưng vẫn khẳng định nó vẫn đúng cho instationary problems.
-
-- Ổng có nói về việc xóa đi những finite element basis functions which have a "very small" support và cũng nói luôn tiêu chuẩn để đánh giá cái element nào là very small.
+- Ổng có nói về việc xóa đi những finite element basis functions which have a "very small" support và cũng nói luôn [tiêu chuẩn để đánh giá](/coding-note-1) cái element nào là very small.
 
 - Trong đây có nhắc tới cái bound tốt nhất nếu dùng standard basis function
 
