--- a/_posts/phd/2017-03-21-papers.md
+++ b/_posts/phd/2017-03-21-papers.md
@@ -21,6 +21,18 @@ u &= 0 \quad (\partial \Omega)\\
 \end{align*}
 $$
 
+### Zahedi
+
+Bà này có làm việc với Peter Hansbo và Burman nên để trong mục của hai ông này luôn! Họ có rất nhiều bài báo với nhau về đề tài này! 
+
+Bài báo **zahedi wadbro 2013 unifomly well-conditioned unfitted Nitsche interface.pdf**
+
+- Cái này là tổng hợp của 2 bài báo cùng tên (nhưng chia thành 2 phần I, II) nói về kỹ thuật giống Hansbo nhưng solution on sub domain seperated by the interface are extedned to the entire domain (xem kỹ hơn ở cuối mục 1)
+- Stabilize đảm bảo matrix condition number $O(h^-2)$.
+- 
+
+
+
 ## Trung Hieu & Lehrenfeld & Arnold
 
 ### Lehrenfeld's notes
@@ -158,6 +170,46 @@ Mô hình của Chopp trong **Duddu2006** có nói có thể xem phương trình
 - Solution method: XFEM is used to computed $u,S,\Phi$ (velocity field, substrate concentration, biofilm growth). The level set method is used to track the biofilm interface. However, they use the less diffusive fast marching scheme with velocity extensions.
 - Governing equations (in the paper)
 - The authors present the results obtained from their numerical method using the model parameters and kinetics given in other authors' work.
+
+### Zunino
+
+Bài báo **zunino 2011 unfitted interface penalty contrast.pdf** nói về 
+
+- Việc trị ill-conditioning by using preconditioning method.
+- cũng dựa trên fictitious domain method
+- Mở rộng ra $H^1$ stability thay vì $L^2$ như trong bài báo của Arnold 2008
+- This analysis of the XFEM space is closed by the proof of discrete inequalities that will be useful to address the stability and conditioning of the scheme proposed in Hansbo 2002
+-  because for such technique both large contrast of diffusion coeﬃcients and small sub-elements negatively affect the condition number of the discrete problem.
+
+Thật sự trùng hợp là ý tưởng của Zunino về việc xây dựng 1 ma trận $P$ (trang 1072) cũng giống với ý tưởng trong sách của Arnold trang 274. Có sự khác nhau nhẹ là ở Zunino có nhân thêm các hệ số diff và reaction.
+
+$$
+P:= 
+\begin{bmatrix}
+M^{\Omega}_{\mu} & 0 & 0 \\
+0 & \mu_1\text{diag}(M^{\Gamma}_1) &0 \\
+0 & 0 & \mu_2\text{diag}(M^{\Gamma}_2)
+\end{bmatrix}
++
+\begin{bmatrix}
+L^{\Omega}_{h,\epsilon} & 0 & 0 \\
+0 & \epsilon_1\text{diag}(L^{\Gamma}_1) &0 \\
+0 & 0 & \epsilon_2\text{diag}(L^{\Gamma}_2)
+\end{bmatrix}
+$$
+
+trong đó $v=v^{\Omega} + v^{\Gamma}\_1 + v^{\Gamma}\_2$, $\mu=$ diffusion coefficient, $\epsilon=$ reaction coefficient, $M,L$ lần lượt là mass và stiffness matrix và
+
+$$
+\begin{align}
+M^{\Omega} \to (v^{\Omega},w^{\Omega})_0, \quad
+M_i^{\Gamma} \to (v_i^{\Gamma},w_i^{\Gamma})_0, \\
+L^{\Omega} \to (\nabla v^{\Omega},\nabla w^{\Omega})_0, \quad
+L_i^{\Gamma} \to (\nabla v_i^{\Gamma},w_i^{\Gamma})_0
+\end{align}
+$$
+
+Sau đó ta sẽ có ma trận mới $P^{-1}A$ có condition number nhỏ hơn $A$ nhiều.
 
 ### Others
 
