--- a/_posts/phd/2017-03-21-papers.md
+++ b/_posts/phd/2017-03-21-papers.md
@@ -29,9 +29,10 @@ Bài báo **zahedi wadbro 2013 unifomly well-conditioned unfitted Nitsche interf
 
 - Cái này là tổng hợp của 2 bài báo cùng tên (nhưng chia thành 2 phần I, II) nói về kỹ thuật giống Hansbo nhưng solution on sub domain seperated by the interface are extedned to the entire domain (xem kỹ hơn ở cuối mục 1)
 - Stabilize đảm bảo matrix condition number $O(h^-2)$.
-- 
+-  the “ghosts” u1h|Ω2 and u2h|Ω1 will be present in the numerical solutions as well. It is the purpose of the stabilization introduced below to make sure that the ghosts on one hand do not cause ill-conditioning of the problem and on the other hand do not affect the order of accuracy of the method.
+-  
 
-
+(chưa đọc xong hết và kỹ vì có lẽ pp hơi khác chút!)
 
 ## Trung Hieu & Lehrenfeld & Arnold
 
