--- a/_posts/phd/2017-03-21-thesis.md
+++ b/_posts/phd/2017-03-21-thesis.md
@@ -112,5 +112,6 @@ Danh sách các thesis hoặc notes hoặc book của người khác rất bổ 
 - **Loch2013** Viết kỹ về level set method
 - **Smith2007** XFEM with interface problem.
 - level set, nxfem, nistche na ná cái của mình nằm trong thesis của **Naerland** (file `decomposition nitsche unfitted - naerland THESIS.pdf`). Một ví dụ để code cũng có thể tìm thấy trong đây.
+- **Zahedi 2011**: ông này làm với Hansbo và Burman, trong cái file mình có thì ổng có viết giới thiệu nhiều phương pháp, immersed interface method, unfitted,...đặc biệt là ổng làm nhiều về condition number, có thể tham khảo thesis của ổng để viết.
 
 Và còn 1 số thesis khác, xem thêm trong thư mục `Downloads\thesis`.
