--- a/_posts/phd/2017-03-21-article-1.md
+++ b/_posts/phd/2017-03-21-article-1.md
@@ -7,7 +7,15 @@ toc: 1
 maths: 1
 ---
 
-### Tại sao trong công thức của weak form of $w$ lại còn $\bar{\alpha}$?
+## Tại sao phải dùng ý tưởng chứng minh của Ern, Di Pietro?
+
+Câu hỏi này nảy sinh khi thử bỏ đi điều kiện Robin BCs, khi ấy phương trình của w giống như phương trình của u trong Hansbo rồi, pp làm tương tự. Sự khác nhau bây giờ chỉ là nonlinear mà thôi!
+
+- System semilinear + system đã có người làm rồi (Chen) (xem thêm [ở đây](/links-locations)) nhưng không có interface.
+- Semilinear + interface đã có sinha et al làm rùi nhưng không dùng nxfem mà dùng iim (xem thêm [ở đây](/links-locations)
+- Cái của mình là semilinear system + nxfem/interface.
+
+## Tại sao trong công thức của weak form of $w$ lại còn $\bar{\alpha}$?
 
 $$
 \begin{align*}
@@ -63,9 +71,7 @@ Câu hỏi đặt ra là chuẩn triple 1 và triple 2 có tương đương vớ
 
 Chú ý quan trọng, $\Vert v\_h\Vert^2\_{L^2(\Omega)} = \Vert v\_h\Vert^2\_{L^2(\Omega\_{12})}$ vì $\int\_{\Omega}v\_h^2 = \int\_{\Omega\_1}v\_h^2 + \int\_{\Omega\_2}v\_h^2$ . Nhớ rằng, chỉ có $\Omega\_{12}$ khi có cái $\alpha$ thôi vì thực tế $\int\_{\Omega}\alpha$ không có ý nghĩa vì $\alpha$ có giá trị khác nhau ở hai subdomain $\Omega\_i$.
 
----
-
-### Boundary condition của $u,v$?
+## Boundary condition của $u,v$?
 
 Lúc đầu có điều kiện thế này ($\Omega_1 = \Omega_b$)
 
@@ -84,15 +90,13 @@ Tuy nhiên sau khi đặt $w=\alpha u+\frac{\beta}{\lambda}v$ thì không biết
 
 Do đó mới có cái điều kiện $u+\varepsilon \nabla_n u=\hat{u}$ và tương tự cho $v$.
 
----
 
-### Các phiên bản của article1.pdf
+## Các phiên bản của article1.pdf
 
 - **article1 - 251116.pdf** : Sử dụng hệ mới $\{w,v,u=\}$ và thay đổi tất cả các định lý, $a_{v}, a_{vh}$ liên quan.
 
----
 
-### Tại sao ta có form của $a\_{vh}$ liên quan tới $B=0$ on $\Gamma$
+## Tại sao ta có form của $a\_{vh}$ liên quan tới $B=0$ on $\Gamma$
 
 Ta có phương trình
 
@@ -164,5 +168,3 @@ $$
 $$
 
 Cuối cùng, ta chọn ra vài terms cho $a_{vh}$
-
----
