--- a/_posts/phd/2017-03-21-article-1.md
+++ b/_posts/phd/2017-03-21-article-1.md
@@ -15,6 +15,8 @@ Câu hỏi này nảy sinh khi thử bỏ đi điều kiện Robin BCs, khi ấy
 - Semilinear + interface đã có sinha et al làm rùi nhưng không dùng nxfem mà dùng iim (xem thêm [ở đây](/links-locations)
 - Cái của mình là semilinear system + nxfem/interface.
 
+Tại vì cái của mình là nonlinear, không áp dụng $\Vert \cdot \Vert \ge C...$ được vì cái này chỉ có cho linear case mà thôi!
+
 ## Tại sao trong công thức của weak form of $w$ lại còn $\bar{\alpha}$?
 
 $$
