--- a/_posts/phd/2017-03-21-papers.md
+++ b/_posts/phd/2017-03-21-papers.md
@@ -8,6 +8,60 @@ tags: ["ghost penalty","interface"]
 maths: 1
 ---
 
+## Semilinear
+
+**System of semilinear equations**
+
+Đã được chứng minh tồn tại và duy nhất ở các dạng sau (của Chen, *semilinear elliptic system - chen.pdf*)
+
+$$
+\begin{align*}
+\begin{cases}
+-\Delta u &=\lambda p(x)f_1(x) \quad (\Omega)\\
+-\Delta v &= \lambda q(x) g_1(x) \quad (\Omega)\\
+u=v&=0 \quad (\partial\Omega)
+\end{cases}
+\end{align*}
+$$
+
+Trong bài báo trên cũng có nói một số bài báo với các pp giải khác nhau cho loại phương trình sau
+
+$$
+\begin{align*}
+\begin{cases}
+-\Delta u &=\lambda f(v) \quad (\Omega)\\
+-\Delta v &= \lambda g(u) \quad (\Omega)\\
+u=v&=0 \quad (\partial\Omega)
+\end{cases}
+\end{align*}
+$$
+
+---
+
+**Semilinear elliptic inteface problem**
+
+Của Sinha (*semilinear interface elliptic - parabolic sinha deka 2009.pdf*) 
+
+$$
+\begin{align*}
+\begin{cases}
+-\nabla\cdot(\beta\nabla u) + u &= f(u) \quad (\Omega)\\
+u&=0 \quad (\partial\Omega)\\
+[u]=[\beta\nabla_n u]&=0 \quad (\Gamma)
+\end{cases}
+\end{align*}
+$$
+
+Trong bài báo này thì tác giả nói là "We assume that the above problem admits a unique solution $u\in X$ . Of course, there are many choices of $f$ that guarantee a solution". Thật ra có nhiều lựa chọn của $f$ được nhắc tới trong *semilinear interface elliptic Deka 2011.pdf*. Mấy cái này chủ yếu chứng minh cho trường hợp $H^1(\Omega)$ và
+
+$$
+X = H^1(\Omega) + H^2(\Omega_1) + H^2(\Omega_2)
+$$
+
+---
+
+
+
 ## Hansbo & Burman
 
 Bài báo của **Hansbo2002** : mô hình giống của Sinha (Sinha có sau) và Chen&Zou nhưng dựa vào unfitted discontinuous fem, cũng dựa vào Nitsche method. Cái này chỉ làm với elliptic thôi.
