--- a/_posts/maths/2017-03-21-analysis-1.md
+++ b/_posts/maths/2017-03-21-analysis-1.md
@@ -152,7 +152,7 @@ The **jump** and **average**:
 - If $[v]=v_1-v_2$ and $\{v\} = \kappa_1 v_1+ \kappa_2 v_2, (\kappa_1+\kappa_2=1)$ then
 
   $$
-  \begin{align*}[fg] &= \{f\}[g] + [f]\{g\} - (\kappa_1-\kappa_2)[f][g] \\ \{fg\} &= \{f\}\{g\} + \kappa_1\kappa_2 [f][g]\end{align*}
+  \begin{align*}[fg] &= \{f\}[g] + [f]\{g\} + (\kappa_1-\kappa_2)[f][g] \\ \{fg\} &= \{f\}\{g\} + \kappa_1\kappa_2 [f][g]\end{align*}
   $$
 
 
