--- a/_posts/phd/2017-03-21-article-1.md
+++ b/_posts/phd/2017-03-21-article-1.md
@@ -7,6 +7,10 @@ toc: 1
 maths: 1
 ---
 
+## [14/3] Sao phải dùng v=nab v=0 trên Gam? Dùng pp gì?
+
+Có thể xem trong *chopp duddu et al 2006 combine nxfem levelset.pdf*. Ổng nói là để cho B (hay v) liên tục qua interface thì phải có điều kiện đó (do v=0 outside biofilm region).
+
 ## Tại sao phải dùng ý tưởng chứng minh của Ern, Di Pietro?
 
 Câu hỏi này nảy sinh khi thử bỏ đi điều kiện Robin BCs, khi ấy phương trình của w giống như phương trình của u trong Hansbo rồi, pp làm tương tự. Sự khác nhau bây giờ chỉ là nonlinear mà thôi!
@@ -58,11 +62,13 @@ Convergence error không thể xét theo dạng thông thường $\Vert u-u_h\Ve
 
 ---
 
-Với 3 chuẩn triple, cái chuẩn liên quan đến $v$ thì có thể chứng minh được nó tương đương với cái chuẩn 2 bằng cách
+Với 3 chuẩn triple, cái chuẩn liên quan đến $v$ thì có thể chứng minh được nó tương đương với cái chuẩn 2 bằng cách **==> sai!!!**
 
 $$
 C_1\Vert \nabla z \Vert^2_{L^2(\Omega_{12})} \ge \Vert \{z\}\Vert_{L^2(\Gamma)}^2 \ge C_2\Vert \{z\}\Vert^2_{-\frac{1}{2}}
 $$
+
+**Update 14/3/18:** Sai vì trong cái chuẩn 1, đó là $\Vert \{ \nabla \_n z \} \Vert\_{-1/2}$ chứ không phải là $\Vert \{ z \} \Vert\_{-1/2}$
 
 Câu hỏi đặt ra là chuẩn triple 1 và triple 2 có tương đương với nhau không?
 
