--- a/_posts/phd/2017-03-21-article-1.md
+++ b/_posts/phd/2017-03-21-article-1.md
@@ -5,11 +5,16 @@ categories:
   - phd
 toc: 1
 maths: 1
+date: 2018-03-15
 ---
 
 ## [14/3] Sao phải dùng v=nab v=0 trên Gam? Dùng pp gì?
 
 Có thể xem trong *chopp duddu et al 2006 combine nxfem levelset.pdf*. Ổng nói là để cho B (hay v) liên tục qua interface thì phải có điều kiện đó (do v=0 outside biofilm region).
+
+**Có thể dùng space khác cho test function được không?**
+
+**Tại sao Trung Hieu dùng tích vô hướng có coef?** : Thay vì dùng tích vô hướng bình thường, anh ấy lại dùng tích vô hướng có $\beta$ trong đó, dự đoán lý do là bởi Henry interface condition ($[\beta u]=0$).
 
 ## Tại sao phải dùng ý tưởng chứng minh của Ern, Di Pietro?
 
@@ -148,12 +153,12 @@ $$
 \end{align*}
 $$
 
-Recall again,
+Recall again, (**note that**, có thể sử dụng form khác giống trong Becker, xem [note này](/nxfem-hansbo-arnold-nitsche#jump-average).)
 
 $$
 \begin{align*}
     \{uv\} &= \{u\}\{v\} + \kappa_1\kappa_2[u][v] ,\\
-     [uv] &= [u]\{v\} + \{u\}[v] - (\kappa_1-\kappa_2)[u][v],
+     [uv] &= [u]\{v\} + \{u\}[v] + (\kappa_1-\kappa_2)[u][v],
 \end{align*}
 $$
 
