--- a/_posts/phd/2017-03-21-article-1.md
+++ b/_posts/phd/2017-03-21-article-1.md
@@ -5,8 +5,14 @@ categories:
   - phd
 toc: 1
 maths: 1
-date: 2018-03-15
+date: 2018-03-21
 ---
+
+## Semilinear existence solution and unique
+
+- Sự tồn tại duy nhất của solution của weak form được nói đến nhiều trong *korotov 2009* và *zenisek 1987* với 1 loạt assumptions luôn.
+- Cái inverse, nghiệm của weak cũng là nghiệm của strong được miêu tả nhiều và chi tiết trong *korotov 2009*, 
+- Cách chứng minh tồn tại và duy nhất của semilinear equation trong *korotov 2009* rất lạ (theorem 2.1), tác giả bắt chước pp được nêu ở chương 10 của *BOOK farago* (theorem 5.15). Ông korotov cũng lấy ý tưởng assumptions trong sách này (assumption 6.2)
 
 ## [14/3] Sao phải dùng v=nab v=0 trên Gam? Dùng pp gì?
 
