--- a/_posts/phd/2017-03-21-papers.md
+++ b/_posts/phd/2017-03-21-papers.md
@@ -8,59 +8,12 @@ tags: ["ghost penalty","interface"]
 maths: 1
 ---
 
-## Semilinear
+## Semilinear, nonlinear elliptic solution
 
-**System of semilinear equations**
+Tham khảo thêm trang chuyên về semilinear [ở đây](/semilinear-non-linear). Ở đây chỉ nói 1 số kết quả đã được làm từ các người khác ra sao
 
-Đã được chứng minh tồn tại và duy nhất ở các dạng sau (của Chen, *semilinear elliptic system - chen.pdf*)
-
-$$
-\begin{align*}
-\begin{cases}
--\Delta u &=\lambda p(x)f_1(x) \quad (\Omega)\\
--\Delta v &= \lambda q(x) g_1(x) \quad (\Omega)\\
-u=v&=0 \quad (\partial\Omega)
-\end{cases}
-\end{align*}
-$$
-
-Trong bài báo trên cũng có nói một số bài báo với các pp giải khác nhau cho loại phương trình sau
-
-$$
-\begin{align*}
-\begin{cases}
--\Delta u &=\lambda f(v) \quad (\Omega)\\
--\Delta v &= \lambda g(u) \quad (\Omega)\\
-u=v&=0 \quad (\partial\Omega)
-\end{cases}
-\end{align*}
-$$
-
----
-
-**Semilinear elliptic inteface problem**
-
-Của Sinha (*semilinear interface elliptic - parabolic sinha deka 2009.pdf*) 
-
-$$
-\begin{align*}
-\begin{cases}
--\nabla\cdot(\beta\nabla u) + u &= f(u) \quad (\Omega)\\
-u&=0 \quad (\partial\Omega)\\
-[u]=[\beta\nabla_n u]&=0 \quad (\Gamma)
-\end{cases}
-\end{align*}
-$$
-
-Trong bài báo này thì tác giả nói là "We assume that the above problem admits a unique solution $u\in X$ . Of course, there are many choices of $f$ that guarantee a solution". Thật ra có nhiều lựa chọn của $f$ được nhắc tới trong *semilinear interface elliptic Deka 2011.pdf*. Mấy cái này chủ yếu chứng minh cho trường hợp $H^1(\Omega)$ và
-
-$$
-X = H^1(\Omega) + H^2(\Omega_1) + H^2(\Omega_2)
-$$
-
----
-
-
+1. *discrete max principle fem elliptic interface - korotov 2009.pdf* ổng đã chứng minh **tồn tại duy nhất nghiệm** cho trường hợp semilinear interface problem nhưng mà áp dụng pp khác (discrete maximum principle fem).
+2. *fem sol nonlinear elliptic - zenisek 1987.pdf*: ổng chứng minh **tồn tại duy nhất nghiệm** nhưng với 1 đống assumptions luôn. Cái này làm chứng minh cho $a(u,v)=(f,v)$
 
 ## Hansbo & Burman
 
