--- a/_posts/phd/2017-03-21-thesis.md
+++ b/_posts/phd/2017-03-21-thesis.md
@@ -25,6 +25,10 @@ Các bài báo cần nhưng chưa download được:
 
 **Vùng lân cận** : the vicinity of the interface $\Gamma$.
 
+---
+
+Cách định nghĩa và hình minh họa của jump và average được cho trong sách *discontinuous galerkin method BOOK - Di Pietro-Ern.pdf* trang 29 pdf. Mesh Faces, Averages and jumps cũng nói khá rõ và chi tiết trong mục 1.2.3 của sách này.
+
 ## Link and locations
 
 - **XFEM** **(original idea)** : Belytschko T, Black T. Elastic crack growth in Finite elements with minimal remeshing. International Journal for Numerical Methods in Engineering 1999
