--- a/_posts/maths/2017-03-21-analysis-3.md
+++ b/_posts/maths/2017-03-21-analysis-3.md
@@ -8,6 +8,43 @@ maths: 1
 date: 2018-03-21
 ---
 
+## Distribution sens
+
+[*Distribution spaces.pdf*] Locally integrable on I $\Leftrightarrow \int\_I v\, dx$.
+
+$v=u'$ in the **weak sense** if 
+
+$$
+-\int_{\Omega} u\varphi' = \int_{\Omega}v \varphi, \forall \varphi \in C_0^{\infty}(\Omega).
+$$
+
+here $C\_0^{\infty}(\Omega)$ denotes the space of $C^{\infty}$ functions on $\Omega$ with compact support in $\Omega$.
+
+If 
+
+$$-\int_{\Omega} u \varphi' = T_{\varphi}, \forall \varphi\in C_0^{\infty}(\Omega)$$ 
+
+then $u'=T$ in **distribution sense**.
+
+The **support** of $f$ is the complement of the largest open set where the function is zero.
+
+Ví dụ kinh điển cho thấy sức mạnh của distribution chính là hàm **Heaviside function**
+
+$$
+H(x) = \begin{cases} 1 (x>0)\\ 0 (x\le 0) \end{cases}
+$$
+
+Không tồn tại $v$ để 
+
+$$
+-\int_{\Omega} H\varphi' = \int_{\Omega}v \varphi, \forall \varphi \in C_0^{\infty}(\Omega).
+$$
+
+Tuy nhiên tồn tại $T\_{\varphi}=\varphi(0):=\delta_0$ (theo nghĩa *distribution sens*)
+
+$$-\int_{\Omega} u \varphi' = T_{\varphi}, \forall \varphi\in C_0^{\infty}(\Omega)$$ 
+
+
 ## $L^p$ and bounded
 
 [Câu trả lời này](https://math.stackexchange.com/questions/605162/are-functions-in-lp-space-always-bounded/608037#608037) rất hay. Nằm trong không gian $L^p$ chưa chắc là bounded. Ở đây cũng nói về **essential bounded** luôn.
