--- a/_posts/phd/2017-03-21-article-1.md
+++ b/_posts/phd/2017-03-21-article-1.md
@@ -8,6 +8,30 @@ maths: 1
 date: 2018-03-21
 ---
 
+## Distrintion sense and idea of convergence
+
+Vì lý do áp dụng distribution sens của $\int\_{R^n}\nabla v\cdot \varphi$ nên ta phải lấy trên không gian $C\_c^{\infty}$. Lưu ý rằng ổng có nói về **density** của $C\_c^{\infty}$ trong $H^1\_0$, có thể xem chứng minh vụ density này ở Theorem 1.3 [tại đây](https://ejde.math.txstate.edu/Monographs/01/chpt2.pdf) hoặc Theorem 1.8 của *distribution pascal frey.pdf*.
+
+
+----
+
+[[s](https://math.stackexchange.com/questions/359289/is-h1-0-omega-dense-in-l2-omega/359336#359336)] For the density (dense)
+
+$$
+\begin{align}
+\overline{C_0^{\infty}(\Omega)}^{||\cdot||_{2}} = L^2(\Omega)\\
+\overline{C_0^{\infty}(\Omega)}^{||\cdot||_{H^1}} = H_0^1(\Omega) \\
+C_0^{\infty} \subset H^1_0(\Omega) \subset L^2(\Omega) \\
+L^2(\Omega) \subset \overline{H^1_0(\Omega)}^{||\cdot||_2} \subset L^2(\Omega)
+\end{align}
+$$
+
+## Dùng Brouwer thay vì Schauder chứng minh fixed point T
+
+Với cái semilinear (phiên bản cũ) của hàm weak, ta dùng Schauder còn với cái semilinear của discrete ta lại dùng Brouwer, tại sao vậy? 
+
+Tại vì discrete thì có thể dùng Brouwer với ít điều kiện hơn, còn nếu cho trường hợp liên tục, strong thì mới dùng Schauder.
+
 ## Semilinear existence solution and unique
 
 - Sự tồn tại duy nhất của solution của weak form được nói đến nhiều trong *korotov 2009* và *zenisek 1987* với 1 loạt assumptions luôn.
