--- a/_posts/phd/2017-03-21-article-1.md
+++ b/_posts/phd/2017-03-21-article-1.md
@@ -8,6 +8,20 @@ maths: 1
 date: 2018-03-21
 ---
 
+## Những thứ linh tinh
+
+Tại sao lại có $\pi\_l^d$ dính với $\Phi$ trong chứng minh convergence của $G\_h^d$ về $\nabla v$? Bởi vì Def 1.57 trong sách *discontinuous galerkin method BOOK - Di Pietro-Ern.pdf*. Điều này có thể giải thích sự khó hiểu trong chứng minh của Theorem 2.2 trong *discrete discontinuous galerkin - pietro - ern.pdf*.
+
+---
+
+Cái vụ RHS, load vector 
+
+$$
+\vert\int_{\Omega} f\varphi\vert \le C\Vert \varphi \Vert_{L^2(\Omega)}
+$$
+
+có thể áp dụng được như trong Lemma 3.2.2 của *fem sol nonlinear elliptic - zenisek 1987.pdf*.
+
 ## Distrintion sense and idea of convergence
 
 Vì lý do áp dụng distribution sens của $\int\_{R^n}\nabla v\cdot \varphi$ nên ta phải lấy trên không gian $C\_c^{\infty}$. Lưu ý rằng ổng có nói về **density** của $C\_c^{\infty}$ trong $H^1\_0$, có thể xem chứng minh vụ density này ở Theorem 1.3 [tại đây](https://ejde.math.txstate.edu/Monographs/01/chpt2.pdf) hoặc Theorem 1.8 của *distribution pascal frey.pdf*.
@@ -25,6 +39,12 @@ C_0^{\infty} \subset H^1_0(\Omega) \subset L^2(\Omega) \\
 L^2(\Omega) \subset \overline{H^1_0(\Omega)}^{||\cdot||_2} \subset L^2(\Omega)
 \end{align}
 $$
+
+Nếu muốn tra chính xác xem *Brezis - Cazenave - BOOK.pdf* và sách của *Adams*.
+
+---
+
+Nói về định nghĩa **discrete gradient**, **jump=0** và sự tương ứng giữa hai không gian, có thể đọc ở mục 1.2.5 sách *discontinuous galerkin method BOOK - Di Pietro-Ern.pdf*.
 
 ## Dùng Brouwer thay vì Schauder chứng minh fixed point T
 
@@ -113,6 +133,8 @@ Câu hỏi đặt ra là chuẩn triple 1 và triple 2 có tương đương vớ
 ---
 
 Chú ý quan trọng, $\Vert v\_h\Vert^2\_{L^2(\Omega)} = \Vert v\_h\Vert^2\_{L^2(\Omega\_{12})}$ vì $\int\_{\Omega}v\_h^2 = \int\_{\Omega\_1}v\_h^2 + \int\_{\Omega\_2}v\_h^2$ . Nhớ rằng, chỉ có $\Omega\_{12}$ khi có cái $\alpha$ thôi vì thực tế $\int\_{\Omega}\alpha$ không có ý nghĩa vì $\alpha$ có giá trị khác nhau ở hai subdomain $\Omega\_i$.
+
+Thật ra có thể tham khảo câu hỏi *[Is Lebesgue measure of the boundary of a bounded Lipschitz domain in R^n z](https://math.stackexchange.com/questions/1197855/is-lebesgue-measure-of-the-boundary-of-a-bounded-lipschitz-domain-in-mathbb-r)ero?*
 
 ## Boundary condition của $u,v$?
 
