--- a/_posts/phd/2017-03-21-thesis.md
+++ b/_posts/phd/2017-03-21-thesis.md
@@ -9,7 +9,7 @@ toc: 1
 
 ## How to write?
 
-- **El-Otmany2015** ổng dành ra 1 chương để viết về NXFEM conforming của Hansbo luôn.
+**El-Otmany2015** ổng dành ra 1 chương để viết về NXFEM conforming của Hansbo luôn.
 
 ---
 
@@ -38,7 +38,7 @@ Cách định nghĩa và hình minh họa của jump và average được cho tr
 - Cách **implementation** interface cut triangles có được nói đến trogn bài báo của Hansbo "CutFEM: discretizing geometry and pde"
 - **Reinitialization** : Trong Arnold, Lehrenfeld và cả master thesis của Dag Lindbo nữa (file `fem level set - dag lindbo.pdf`)
 - level set, nxfem, nistche na ná cái của mình nằm trong thesis của Naerland (fiel `decomposition nitsche unfitted - naerland THESIS.pdf`). Một **ví dụ để code** cũng có thể tìm thấy trong đây.
--  In [ BZ12 ] it is shown that κ ( A ) depends on how the interface cuts an element. (trang 50 **xfem interface Christoph Lehrenfeld NOTE.pdf**)
+-  In [BZ12] it is shown that $\kappa(A)$ depends on how the interface cuts an element. (trang 50 **xfem interface Christoph Lehrenfeld NOTE.pdf**)
 
 ## Useful terms and expressions
 
@@ -50,7 +50,7 @@ Cách định nghĩa và hình minh họa của jump và average được cho tr
 - In addition, C(a1,...,) denotes a constant depending on the arguments {a_i}
 - Owing to Theorem A, ... = giống Thanks to ...
 - thanks to Cauchy-Schwarz inequality, together with Proposition
-- We also hope to survey existing algorithms and to intro- duce new ones,...
+- We also hope to survey existing algorithms and to introduce new ones,...
 - For the sake of simplicity,
 - , viz., (tức là)
 - In the analysis we will frequently use the notation $a \lesssim b$ meaning that $a ≤ Cb$ where $C$ is a positive constant
@@ -58,16 +58,13 @@ Cách định nghĩa và hình minh họa của jump và average được cho tr
 
 ## Discussion với cô & Ideas
 
-### Ideas
-
 Hansbo, Loch, Lehrenfeld, Trung-Hieu, Arnold, Hansbo, Barrau,.. chỉ làm việc trên NXFEM cho linear thông thường.
 
 **Mình** : nonlinear + system + nxfem : nhưng chỉ tập trung vào system + existence + convergence.
 
 **Còn thiếu** : nonlinear + nxfem cho single equation, convergence của nghiệm, rate of convergence, stability,... $\Rightarrow$ có thể được một bài báo nữa.
 
-
-### Discussion với cô
+---
 
 Convergence theo nghĩa thông thường $\Vert u-u_h \Vert$ chỉ có thể áp dụng nếu như chứng minh được nghiệm duy nhất. Còn không thì phải làm theo hướng hội tụ yếu hay hầu khắp nơi gì đó.
 
